# Non-convex-Risk-Parity-

./: LICENSE  README.md
non_convex_cuda/: CMakeCache.txt  CMakeLists.txt  CuPortfolio  LogCuPortfolio  Makefile  account.h  admmoption.cpp  admmoption.h  cmake_install.cmake  costfunction.cu  costfunction.h  dfp_cu.cu  dfp_cu.h  kenel_function.h  kernel_function.cu  main.cpp  main_log.cpp  parameters.h  portfoliomodel.cpp  portfoliomodel.h  portfoliosolver.cpp  portfoliosolver.cu  portfoliosolver.h  testshell.sh  time_record  writedata.py
non_convex_cuda/Common/: Makefile  cmake_install.cmake
non_convex_cuda/Common/Models/: Makefile  (+1 more)
non_convex_cuda/output/: error_on_10.csv  error_on_100.csv  error_on_1000.csv  error_on_200.csv  error_on_2000.csv  error_on_300.csv  error_on_3000.csv  error_on_400.csv  error_on_50.csv  error_on_500.csv  error_on_600.csv  error_on_700.csv  error_on_800.csv  solution_of_10.csv  solution_of_100.csv  solution_of_1000.csv  solution_of_200.csv  solution_of_2000.csv  solution_of_300.csv  solution_of_3000.csv  solution_of_400.csv  solution_of_50.csv  solution_of_500.csv  solution_of_600.csv  solution_of_700.csv  solution_of_800.csv  time_spent_on_50.csv  time_spent_on_500.csv  true_value_on_10.csv  true_value_on_100.csv  true_value_on_1000.csv  true_value_on_200.csv  true_value_on_2000.csv  true_value_on_300.csv  true_value_on_3000.csv  true_value_on_400.csv  true_value_on_50.csv  true_value_on_500.csv  true_value_on_600.csv  true_value_on_700.csv  (+1 more)
non_convex_cuda/output_log/: error_on_10.csv  error_on_100.csv  error_on_1000.csv  error_on_150.csv  error_on_200.csv  error_on_250.csv  error_on_300.csv  error_on_350.csv  error_on_400.csv  error_on_450.csv  error_on_50.csv  error_on_500.csv  error_on_600.csv  error_on_700.csv  error_on_800.csv  error_on_900.csv  solution_of_10.csv  solution_of_100.csv  solution_of_1000.csv  solution_of_150.csv  solution_of_200.csv  solution_of_250.csv  solution_of_300.csv  solution_of_350.csv  solution_of_400.csv  solution_of_450.csv  solution_of_50.csv  solution_of_500.csv  solution_of_600.csv  solution_of_700.csv  solution_of_800.csv  solution_of_900.csv  true_value_on_10.csv  true_value_on_100.csv  true_value_on_1000.csv  true_value_on_150.csv  true_value_on_200.csv  true_value_on_250.csv  true_value_on_300.csv  true_value_on_350.csv  (+8 more)
